# oop2_lab_2

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  computer_calculator.pro  opencode.json
.opencode/agent/: coder.md  qa.md  report.md  verificator.md  writer.md
docs/: index.typ
src/: Component.cpp  Component.hpp  ComputerCalculator.cpp  ComputerCalculator.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: test_calculator_logic  test_calculator_logic.cpp  ui_test.py
